--- a/src/i18n/az.json
+++ b/src/i18n/az.json
@@ -2,6 +2,7 @@
   "welcome": "Xoş gəlmisiniz",
   "dev_by": "Hazırlayan: Azad Mirheydərzadə",
   "great_title": "Əla! Siz daxil oldunuz.",
+  "design_msg": "Dizaynda gördüyünüz hər şey mənim tərəfimdən hazırlanıb, heç bir Figma və ya şablondan istifadə olunmayıb.",
   "great_text": "İndi form sahələrini dolduraraq otel rezervasiyanız üçün qiymətləri görə bilərsiniz.",
   "empty_msg": "Nəticələri görmək üçün zəhmət olmasa başlama tarixini, otelinizi, tarixi və qalacağınız gün sayını təyin edin.",
   "form_section": {
